# v2rayse

./: .gitignore  Makefile  config.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: Clash.yml  ClashR.yml  freeprox_cn.txt  freeprox_cn_4.txt  freeprox_cn_5.txt  freeprox_cn_more.txt  freeprox_socks4.txt  freeprox_socks5.txt  freeproxy_all.txt  freeproxy_anonymity.txt  freeproxy_cn.txt  freeproxy_cn_4.txt  freeproxy_cn_5.txt  freeproxy_cn_more.txt  freeproxy_https.txt  freeproxy_socks  freeproxy_socks.txt  freeproxy_socks4.txt  freeproxy_socks5.txt  v2ray.txt
scripts/: checker.py  fetcher.py  freeproxy.py  main.py  models.py  parser.py  scraper.py  writer.py
